crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Diagnostics_for_comm…_-_Special-cased_diagno…_(a4b698196d337a3f).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Diagnostics for common errors - Special-cased diagnostic for `callable` used in a type expression
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [invalid-type-form]
2 | # error: [invalid-type-form]
3 | def decorator(fn: callable) -> callable:
4 |     return fn
```

# Diagnostics

```
error[invalid-type-form]: Function `callable` is not valid in a parameter annotation
 --> src/mdtest_snippet.py:3:19
  |
3 | def decorator(fn: callable) -> callable:
  |                   ^^^^^^^^ Did you mean `collections.abc.Callable`?
  |

```

```
error[invalid-type-form]: Function `callable` is not valid in a return type annotation
 --> src/mdtest_snippet.py:3:32
  |
3 | def decorator(fn: callable) -> callable:
  |                                ^^^^^^^^ Did you mean `collections.abc.Callable`?
  |

```
