crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Diagnostics_for_comm…_-_Tuple-literal_used_w…_(f61204fc81905069).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Diagnostics for common errors - Tuple-literal used when you meant to use a tuple
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(
 2 |     x: (),  # error: [invalid-type-form]
 3 | ) -> ():  # error: [invalid-type-form]
 4 |     return x
 5 | def _(
 6 |     x: (int,),  # error: [invalid-type-form]
 7 | ) -> (int,):  # error: [invalid-type-form]
 8 |     return x
 9 | def _(
10 |     x: (int, str),  # error: [invalid-type-form]
11 | ) -> (int, str):  # error: [invalid-type-form]
12 |     return x
```

# Diagnostics

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:2:8
  |
2 |     x: (),  # error: [invalid-type-form]
  |        ^^ Did you mean `tuple[()]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
  |
1 | def _(
  -     x: (),  # error: [invalid-type-form]
2 +     x: tuple[()],  # error: [invalid-type-form]
3 | ) -> ():  # error: [invalid-type-form]
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a return type annotation
 --> src/mdtest_snippet.py:3:6
  |
3 | ) -> ():  # error: [invalid-type-form]
  |      ^^ Did you mean `tuple[()]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
  |
2 |     x: (),  # error: [invalid-type-form]
  - ) -> ():  # error: [invalid-type-form]
3 + ) -> tuple[()]:  # error: [invalid-type-form]
4 |     return x
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:6:8
  |
6 |     x: (int,),  # error: [invalid-type-form]
  |        ^^^^^^ Did you mean `tuple[int]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
  |
5 | def _(
  -     x: (int,),  # error: [invalid-type-form]
6 +     x: tuple[int],  # error: [invalid-type-form]
7 | ) -> (int,):  # error: [invalid-type-form]
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a return type annotation
 --> src/mdtest_snippet.py:7:6
  |
7 | ) -> (int,):  # error: [invalid-type-form]
  |      ^^^^^^ Did you mean `tuple[int]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
  |
6 |     x: (int,),  # error: [invalid-type-form]
  - ) -> (int,):  # error: [invalid-type-form]
7 + ) -> tuple[int]:  # error: [invalid-type-form]
8 |     return x
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a parameter annotation
  --> src/mdtest_snippet.py:10:8
   |
10 |     x: (int, str),  # error: [invalid-type-form]
   |        ^^^^^^^^^^ Did you mean `tuple[int, str]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
   |
9  | def _(
   -     x: (int, str),  # error: [invalid-type-form]
10 +     x: tuple[int, str],  # error: [invalid-type-form]
11 | ) -> (int, str):  # error: [invalid-type-form]
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-type-form]: Tuple literals are not allowed in this context in a return type annotation
  --> src/mdtest_snippet.py:11:6
   |
11 | ) -> (int, str):  # error: [invalid-type-form]
   |      ^^^^^^^^^^ Did you mean `tuple[int, str]`?
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
help: Replace with `tuple[...]`
   |
10 |     x: (int, str),  # error: [invalid-type-form]
   - ) -> (int, str):  # error: [invalid-type-form]
11 + ) -> tuple[int, str]:  # error: [invalid-type-form]
12 |     return x
   |
note: This is an unsafe fix and may change runtime behavior

```
