crates/ty_python_semantic/resources/mdtest/snapshots/invalid_argument_type.md_-_Invalid_argument_type_diagnostics_-_Many_parameters_across_multiple_lines.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_argument_type.md - Invalid argument type diagnostics - Many parameters across multiple lines
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(
2 |     x: int,
3 |     y: int,
4 |     z: int,
5 | ) -> int:
6 |     return x * y * z
7 | 
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to this function is incorrect
 --> src/mdtest_snippet.py:8:8
  |
6 |     return x * y * z
7 |
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(
  |     ^^^
2 |     x: int,
3 |     y: int,
  |     ------ Parameter declared here
4 |     z: int,
5 | ) -> int:
  |
info: `lint:invalid-argument-type` is enabled by default

```
